ncap/Ifc58/include/IFCAPI.H

/* CICapMod class */
pCInterrupt IFCCALL CICapMod_CreateInterruptObject(CICapMod *capMod,CICamera *cam,ICAP_INTR_EVENT intrEvent);
BOOL IFCCALL CICapMod_CreateSeqFrame(CICapMod *capMod,int frameCnt,CIFrame **frames,DWORD dx, DWORD dy, IFC_DEPTH depth, IFC_COLOR color);
pCIFrame IFCCALL CICapMod_CreateFrame(CICapMod *capMod,DWORD dx, DWORD dy, IFC_DEPTH depth, IFC_COLOR color);
void IFCCALL CICapMod_DeleteAllFrames(CICapMod *capMod);
void IFCCALL CICapMod_Cleanup(CICapMod *capMod);
pCIFrame IFCCALL CICapMod_GetCamFrame(CICapMod *capMod,CICamera *cam);
void IFCCALL CICapMod_ReleaseCamFrame(CICapMod *capMod,CICamera *camera,CIFrame * frame);
void IFCCALL CICapMod_GrabRelease(CICapMod *capMod,HIFCGRAB grabID, int seqNum);
void IFCCALL CICapMod_GrabLock(CICapMod *capMod,HIFCGRAB grabID, int seqNum);
int IFCCALL CICapMod_GrabStop(CICapMod *capMod,HIFCGRAB grabID);
int IFCCALL CICapMod_GrabWaitFrame(CICapMod *capMod,HIFCGRAB grabID, BYTE **frameAddr, int FrameSeqNum, DWORD milliseconds, BOOL lock,DWORD *acquiredDy);
 
HIFCGRAB IFCCALL CICapMod_Grab_HostBuf(CICapMod *capMod,CICamera *camera, DWORD dwModes, pBYTE dest, int ringNumFrames,int totalNumFrames, short x, short y, short dx, short dy) ;
     
int IFCCALL CICapMod_GrabFrameSeqNum(CICapMod *capMod,HIFCGRAB grabID,int frameRingNum) ;
 
BOOL IFCCALL CICapMod_SeqSnap(CICapMod *capMod,CICamera *camera, pBYTE dest, int numFrames,short x, short y, short dx, short dy);
    
BOOL IFCCALL CICapMod_Snap_HostBuf(CICapMod *capMod,CICamera *camera, pBYTE dest,short x, short y, short dx, short dy);
HTRIGOP IFCCALL CICapMod_StartTrigOps(CICapMod *capMod,CICamera *camera);
BOOL IFCCALL CICapMod_TrigRead(CICapMod *capMod,HTRIGOP trigOp,short x, short y, short dx, short dy, pBYTE dest);
BOOL IFCCALL CICapMod_WaitTrig(CICapMod *capMod,HTRIGOP trigOp,long waitTime);
BOOL IFCCALL CICapMod_TrigSnap(CICapMod *capMod,HTRIGOP trigOp,DWORD trigSource);
 
BOOL IFCCALL CICapMod_StopTrigOps(CICapMod *capMod,HTRIGOP trigOp);
BOOL IFCCALL CICapMod_SetZoom(CICapMod *capMod,CICamera *camera,float xZoom, float yZoom);
void IFCCALL CICapMod_GetZoomCaps(CICapMod *capMod,CICamera *camera,LPZOOMCAP lpCaps);
void IFCCALL CICapMod_GetReadCaps(CICapMod *capMod,LPREADCAP lpCaps);
void IFCCALL CICapMod_SetReadColorRemap(CICapMod *capMod,BOOL bEnabled);
void IFCCALL CICapMod_Freeze(CICapMod *capMod,CICamera *camera);
void IFCCALL CICapMod_Snap(CICapMod *capMod,CICamera *camera);
void IFCCALL CICapMod_Grab(CICapMod *capMod,CICamera *camera);
void IFCCALL CICapMod_ReleaseCamMutex(CICapMod *capMod,CICamera *camera);
pCIFrame IFCCALL CICapMod_GetCamMutex(CICapMod *capMod,CICamera *camera);
pCICamera IFCCALL CICapMod_GetCam(CICapMod *capMod,DWORD camPortNum);
BOOL IFCCALL CICapMod_Create(CICapMod *capMod,char *modname,DWORD seqnum);
BOOL IFCCALL CICapMod_Create_FromConfig(CICapMod *capMod,DWORD seqnum, char *cfgFile);
BOOL IFCCALL CICapMod_WriteConfigFile(CICapMod *capMod,const char *szCfgFileName, IFC_CFG_CAMERA_SPECIFIER eCamFlag );
 
BOOL IFCCALL CICapMod_WriteConfigFile_CamName(CICapMod *capMod,const char *szCfgFileName, const char *szCameraName);
WORD IFCCALL CICapMod_OutportStrobeVal(CICapMod *capMod,IFC_LEVEL_TYPE val,DWORD channelNum);
 
void IFCCALL CICapMod_OutportVal(CICapMod *capMod,WORD val,DWORD channelNum);
 
void IFCCALL CICapMod_InportMode(CICapMod *capMod,BOOL strobed,IFC_EDGE_TYPE latchEdge,DWORD channelNum);
 
WORD IFCCALL CICapMod_InportVal(CICapMod *capMod,DWORD channelNum);
 
WORD IFCCALL CICapMod_InportInterruptPolarity(CICapMod *capMod, IFC_EDGE_TYPE intrEdge,DWORD channelNum);
//BOOL IFCCALL CICapMod_TrigSnap(CICapMod *capMod,CIFrame *frame,DWORD trigSource); 
//BOOL IFCCALL CICapMod_WaitTrig(CICapMod *capMod,CIFrame *frame,long waitTime);
BOOL IFCCALL CICapMod_SnapAsync(CICapMod *capMod,CIFrame *frame);
//BOOL IFCCALL CICapMod_SeqSnap(CICapMod *capMod,DWORD frameCnt,CIFrame **frames);
BOOL IFCCALL CICapMod_SeqSnapAsync(CICapMod *capMod,DWORD frameCnt,CIFrame **frames);
short IFCCALL CICapMod_Acqbits(CICapMod *capMod, CIFrame *frame, short mode);
BOOL IFCCALL CICapMod_WaitStartVB (CICapMod *capMod, CIFrame *frame);
BOOL IFCCALL CICapMod_WaitVertBlank (CICapMod *capMod,CIFrame *frame);
BOOL IFCCALL CICapMod_WaitNotVB (CICapMod *capMod, CIFrame *frame, BOOL vbsync);
BOOL IFCCALL CICapMod_WaitAcq(CICapMod *capMod,CIFrame *frame);
void IFCCALL CICapMod_ReadDestPitchArea (CICapMod *capMod,CICamera *cam, short x,short y,short dx,short dy, short destlinebytes, DWORD physdest, DWORD readOptions);
 
BOOL IFCCALL CICapMod_LineReverseRead (CICapMod *capMod,CICamera *cam, short x,short y,short dx,short dy,short destlinebytes, BYTE *destadr,DWORD readOptions);
 
BOOL IFCCALL CICapMod_ReadArea (CICapMod *capMod,CICamera *cam, short x,short y,short dx,short dy,BYTE *destadr,DWORD dest_dx,DWORD readOptions ) ;
  
float IFCCALL CICapMod_ReadPerformance(CICapMod *capMod) ;
//IFC_INTREVENT IFCCALL CICapMod_ModInterruptEvent(CICapMod *capMod,CICamera *cam,ICAP_INTR_EVENT intrEvent){return IFC_INTREVENT_INVALID;};
PIFC_CAMERA_DEF_TYPE IFCCALL CICapMod_FindCameraType(CICapMod *capMod,const char *camName);
void IFCCALL CICapMod_ProcessCameraFileList(CICapMod *capMod,const char *szListFileName);
void IFCCALL CICapMod_ProcessCameraFilesInDir(CICapMod *capMod,const pSTRING szPath, BOOL bRecurse );
 
pSTRING IFCCALL CICapMod_GetFirstCamType(CICapMod *capMod);
pSTRING IFCCALL CICapMod_GetNextCamType(CICapMod *capMod);
PIFC_CAMERA_DEF_TYPE IFCCALL CICapMod_AddCameraType(CICapMod *capMod,pSTRING strNewCamName, pSTRING strExistingCamName);
DWORD IFCCALL CICapMod_ContiguousMemAvailable(CICapMod *capMod);
BOOL IFCCALL CICapMod_EnableJitGrabMemLock(CICapMod *capMod);
DWORD IFCCALL CICapMod_SetAcqTimeout(CICapMod *capMod, DWORD dwMilliSeconds);
DWORD IFCCALL CICapMod_GetAcqTimeout(CICapMod *capMod);
MEMLOCKHDL IFCCALL CICapMod_LockMem(CICapMod *capMod, BYTE *ptr,DWORD dwSize);
void IFCCALL CICapMod_UnLockMem(CICapMod *capMod, MEMLOCKHDL memLockHandle);