ncap/Ifc58/examples/VB/Ifcapi.bas


Declare Function CICapMod_CreateInterruptObject Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long, ByVal intrEvent As ICAP_INTR_EVENT) As Long
Declare Function CICapMod_CreateSeqFrame Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal frameCnt As Integer, ByRef frames As Long, ByVal dx As Long, ByVal dy As Long, ByVal depth As IFC_DEPTH, ByVal color As IFC_COLOR) As Integer
Declare Function CICapMod_CreateFrame Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal dx As Long, ByVal dy As Long, ByVal depth As IFC_DEPTH, ByVal color As IFC_COLOR) As Long
Declare Sub CICapMod_DeleteAllFrames Lib "ifcapi.dll" (ByVal CapMod As Long)
Declare Sub CICapMod_Cleanup Lib "ifcapi.dll" (ByVal CapMod As Long)
Declare Function CICapMod_GetCamFrame Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long) As Long
Declare Sub CICapMod_ReleaseCamFrame Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long, ByVal pFrame As Long)
Declare Sub CICapMod_GrabRelease Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal grabID As Long, ByVal seqnum As Integer)
Declare Sub CICapMod_GrabLock Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal grabID As Long, ByVal seqnum As Integer)
Declare Function CICapMod_GrabStop Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal grabID As Long) As Integer
Declare Function CICapMod_GrabWaitFrame Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal grabID As Long, ByRef frameAddr As Byte, ByVal FrameSeqNum As Integer, ByVal milliseconds As Long, ByVal block As Boolean, ByRef acquiredDy As Long) As Integer
Declare Function CICapMod_Grab_HostBuf Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long, ByVal dwModes As Long, ByRef dest As Byte, ByVal ringNumFrames As Integer, ByVal totalNumFrames As Integer, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer) As Long
Declare Function CICapMod_GrabFrameSeqNum Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal grabID As Long, ByVal frameRingNum As Integer) As Integer
Declare Function CICapMod_SeqSnap Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long, ByRef dest As Byte, ByVal numFrames As Integer, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer) As Integer
Declare Function CICapMod_Snap_HostBuf Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long, ByRef dest As Byte, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer) As Integer
Declare Function CICapMod_StartTrigOps Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long) As Long
Declare Function CICapMod_TrigRead Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal trigOp As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByRef dest As Byte) As Long
Declare Function CICapMod_WaitTrig Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal trigOp As Long, ByVal waitTime As Long) As Long
Declare Function CICapMod_TrigSnap Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal trigOp As Long, ByVal trigSource As Long) As Long
Declare Function CICapMod_StopTrigOps Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal trigOp As Long) As Long
Declare Function CICapMod_SetZoom Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long, ByVal xZoom, ByVal yZoom As Single) As Integer
'Declare Sub CICapMod_GetZoomCaps lib "ifcapi.dll" (ByVal capMod As Long,ByVal pCamera As Long,LPZOOMCAP lpCaps)
'Declare Sub CICapMod_GetReadCaps lib "ifcapi.dll" (ByVal capMod As Long,LPREADCAP lpCaps)
Declare Sub CICapMod_SetReadColorRemap Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal bEnabled As Boolean)
Declare Sub CICapMod_Freeze Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long)
Declare Sub CICapMod_Snap Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long)
Declare Sub CICapMod_Grab Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long)
Declare Sub CICapMod_ReleaseCamMutex Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long)
Declare Function CICapMod_GetCamMutex Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long) As Long
Declare Function CICapMod_GetCam Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal camPortNum As Long) As Long
Declare Function CICapMod_Create Lib "ifcapi.dll" (ByVal CapMod As Long, ByRef modName As Byte, ByVal seqnum As Long) As Integer
Declare Function CICapMod_Create_FromConfig Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal seqnum As Long, ByRef cfgFile As Byte) As Integer
'Declare Function CICapMod_WriteConfigFile lib "ifcapi.dll" (ByVal capMod As Long,const ByRef szCfgFileName As BYTE, IFC_CFG_CAMERA_SPECIFIER eCamFlag ) As Integer
'Declare Function CICapMod_WriteConfigFile_CamName lib "ifcapi.dll" (ByVal capMod As Long,const ByRef szCfgFileName As BYTE, const ByRef szCameraName As BYTE) As Integer
Declare Function CICapMod_OutportStrobeVal Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal val As IFC_LEVEL_TYPE, ByVal channelNum As Long) As Integer
Declare Sub CICapMod_OutportVal Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal val As Integer, ByVal channelNum As Long)
Declare Sub CICapMod_InportMode Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal strobed As Boolean, ByVal latchEdge As IFC_EDGE_TYPE, ByVal channelNum As Long)
Declare Function CICapMod_InportVal Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal channelNum As Long) As Integer
Declare Function CICapMod_InportInterruptPolarity Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal intrEdge As IFC_EDGE_TYPE, ByVal channelNum As Long) As Integer
Declare Function CICapMod_SnapAsync Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pFrame As Long) As Integer
Declare Function CICapMod_SeqSnapAsync Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal frameCnt As Long, ByRef frames As Long) As Integer
Declare Function CICapMod_Acqbits Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pFrame As Long, ByVal mode As Integer) As Integer
Declare Function CICapMod_WaitStartVB Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pFrame As Long) As Integer
Declare Function CICapMod_WaitVertBlank Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pFrame As Long) As Integer
Declare Function CICapMod_WaitNotVB Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pFrame As Long, ByVal vbsync As Boolean) As Integer
Declare Function CICapMod_WaitAcq Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pFrame As Long) As Integer
Declare Sub CICapMod_ReadDestPitchArea Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal destlinebytes As Integer, ByVal physdest As Long, ByVal readOptions As Long)
Declare Function CICapMod_LineReverseRead Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal destlinebytes As Integer, ByRef destadr As Byte, ByVal readOptions As Long) As Integer
Declare Function CICapMod_ReadArea Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal pCamera As Long, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByRef destadr As Byte, ByVal dest_dx As Long, ByVal readOptions As Long) As Integer
Declare Function CICapMod_ReadPerformance Lib "ifcapi.dll" (ByVal CapMod As Long) As Single
Declare Function CICapMod_FindCameraType Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal camName As String) As Long
Declare Sub CICapMod_ProcessCameraFileList Lib "ifcapi.dll" (ByVal CapMod As Long, ByRef szListFileName As Byte)
Declare Sub CICapMod_ProcessCameraFilesInDir Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal szPath As String, ByVal bRecurse As Boolean)
Declare Function CICapMod_GetFirstCamType Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CICapMod_GetNextCamType Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CICapMod_AddCameraType Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal strNewCamName As String, ByVal strExistingCamName As String) As Long
Declare Function CICapMod_ContiguousMemAvailable Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CICapMod_EnableJitGrabMemLock Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CICapMod_GetAcqTimeout Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CICapMod_SetAcqTimeout Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal dwMilliseconds As Long) As Long
Declare Function CICapMod_LockMem Lib "ifcapi.dll" (ByVal CapMod As Long, ByRef ptr As Byte, ByVal dwSize As Long) As Long
Declare Sub CICapMod_UnLockMem Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal memLockHandle As Long)
